wrote some new things

--- a/Beta/requestLibrary.ipynb
+++ b/Beta/requestLibrary.ipynb
@@ -36,12 +36,12 @@
    "source": [
     "# 各种请求方式\n",
     "import requests\n",
-    "\n",
-    "requests.post('http://httpbin.org/post')\n",
-    "requests.put('http://httpbin.org/put')\n",
-    "requests.delete('http://httpbin.org/delete')\n",
-    "requests.head('http://httpbin.get')\n",
-    "requests.options('http://httpbin.org/get')\n"
+    "# \n",
+    "# requests.post('http://httpbin.org/post')\n",
+    "# requests.put('http://httpbin.org/put')\n",
+    "# requests.delete('http://httpbin.org/delete')\n",
+    "# requests.head('http://httpbin.get')\n",
+    "# requests.options('http://httpbin.org/get')\n"
    ]
   },
   {
