Completed the script for searching apt.

--- a/Python/Alpha/findApartment.ipynb
+++ b/Python/Alpha/findApartment.ipynb
@@ -79,7 +79,10 @@
     "    else:\n",
     "        print('Get your apartment sucker!')\n",
     "        message_box('Apartment found', 'Go get it!', 1)\n",
-    "        winsound.Beep(37,2000)\n",
+    "        soundTime = 3\n",
+    "        while soundTime is not 0:\n",
+    "            winsound.Beep(600, 1000)\n",
+    "            soundTime -= 1\n",
     "        hasSpot = True\n",
     "        countTime = False        \n"
    ]
