More features are added.

--- a/Python/Alpha/winSound.ipynb
+++ b/Python/Alpha/winSound.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,22 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "message_box('Apartment found', 'Go get it!', 1)"
+    "message_box('Apartment found', 'Sucker!', 1)"
    ]
   },
   {
