More features are added.

--- a/Python/Alpha/findApartment.ipynb
+++ b/Python/Alpha/findApartment.ipynb
@@ -20,6 +20,11 @@
     "from selenium import webdriver\n",
     "from selenium.common.exceptions import NoSuchElementException\n",
     "from urllib.request import urlopen\n",
+    "from email import encoders\n",
+    "from email.header import Header\n",
+    "from email.mime.text import MIMEText\n",
+    "from email.utils import parseaddr, formataddr\n",
+    "import smtplib\n",
     "import time\n",
     "import datetime\n",
     "import random\n",
@@ -33,25 +38,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This driver will call HFS.\n",
+    "# This driver will call HFS. Log into HFS and navigate to search page.\n",
     "driver = webdriver.Chrome()\n",
     "hfs_url = 'https://ucharm.hfs.washington.edu/ucharm/SelectRoomResults.asp'\n",
-    "driver.get(hfs_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Debug This works!\n",
-    "driver.refresh()\n",
+    "driver.get(hfs_url)\n",
     "\n",
     "\n",
     "# Define a messageBox\n",
     "def message_box(title, text, style):\n",
-    "    return ctypes.windll.user32.MessageBoxW(0, text, title, style)\n"
+    "    return ctypes.windll.user32.MessageBoxW(0, text, title, style)"
    ]
   },
   {
@@ -60,16 +55,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initial variables\n",
+    "# Initialize variables\n",
     "hasSpot = False\n",
     "countTime = True\n",
     "timeElapsed = 0\n",
     "timeToStop = 28800\n",
-    "# Make a box to stop\n",
-    "ifExit = message_box('Press to stop', 'Stop if you don/t want to refresh any more.', 1)  # Print a exit box.\n",
+    "msg = MIMEText('Go and get your apartment!', 'plain', 'utf-8')\n",
+    "msg['From'] = 'hongjunwu@hotmail.com'\n",
+    "msg['To'] = 'hongjunwu@hotmail.com'\n",
+    "msg['Subject'] = Header(u'[Python] There is an apartment.', 'utf-8').encode()\n",
     "\n",
+    "\n",
+    "# Make a box to stop\n",
+    "ifExit = message_box('Press to stop', 'Stop if you do not want to refresh any more.', 1)  # Print a exit box.\n",
+    "\n",
+    "\n",
+    "# Main program\n",
     "while hasSpot is not True:\n",
-    "    if ifExit == 1 or 2:\n",
+    "    # Stop refreshing if the user clicked button in the box.\n",
+    "    if ifExit == 1:\n",
     "        hasSpot = True\n",
     "    # Stop if time elapsed equal to time to stop\n",
     "    if timeElapsed == timeToStop:\n",
@@ -97,6 +101,15 @@
     "        driver.refresh()  # And refresh the page.\n",
     "    else:\n",
     "        message_box('Apartment found', 'Get your apartment sucker!', 1)  # Print a box\n",
+    "        server = smtplib.SMTP('smtp-mail.outlook.com', 587)\n",
+    "        server.connect(\"smtp-mail.outlook.com\", 587)\n",
+    "        server.ehlo()\n",
+    "        server.starttls()\n",
+    "        server.ehlo()\n",
+    "        server.set_debuglevel(1)\n",
+    "        server.login('hongjunwu@hotmail.com', 'wepa4RE2')\n",
+    "        server.sendmail('hongjunwu@hotmail.com', ['hongjunwu@hotmail.com'], msg.as_string())\n",
+    "        server.quit()\n",
     "        soundTime = 3  # Beep three times\n",
     "        while soundTime is not 0:\n",
     "            winsound.Beep(600, 1000)\n",
