--- a/Python/Alpha/winSound.ipynb
+++ b/Python/Alpha/winSound.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -123,21 +123,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "reply: b'235 2.7.0 Authentication successful\\r\\n'\nreply: retcode (235); Msg: b'2.7.0 Authentication successful'\nsend: 'mail FROM:<hongjunwu@hotmail.com> size=249\\r\\n'\nreply: b'250 2.1.0 Sender OK\\r\\n'\nreply: retcode (250); Msg: b'2.1.0 Sender OK'\nsend: 'rcpt TO:<hongjunwu@hotmail.com>\\r\\n'\nreply: b'250 2.1.5 Recipient OK\\r\\n'\nreply: retcode (250); Msg: b'2.1.5 Recipient OK'\nsend: 'data\\r\\n'\n"
+      "reply: b'235 2.7.0 Authentication successful\\r\\n'\nreply: retcode (235); Msg: b'2.7.0 Authentication successful'\nsend: 'mail FROM:<hongjunwu@hotmail.com> size=253\\r\\n'\nreply: b'250 2.1.0 Sender OK\\r\\n'\nreply: retcode (250); Msg: b'2.1.0 Sender OK'\nsend: 'rcpt TO:<hongjunwu@hotmail.com>\\r\\n'\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "reply: b'354 Start mail input; end with <CRLF>.<CRLF>\\r\\n'\nreply: retcode (354); Msg: b'Start mail input; end with <CRLF>.<CRLF>'\ndata: (354, b'Start mail input; end with <CRLF>.<CRLF>')\nsend: b'Content-Type: text/plain; charset=\"utf-8\"\\r\\nMIME-Version: 1.0\\r\\nContent-Transfer-Encoding: base64\\r\\nFrom: hongjunwu@hotmail.com\\r\\nTo: hongjunwu@hotmail.com\\r\\nSubject: =?utf-8?q?=5BPython=5D_There_is_an_apartment=2E?=\\r\\n\\r\\naGVsbG8sIHNlbmQgYnkgUHl0aG9uLi4u\\r\\n.\\r\\n'\n"
+      "reply: b'250 2.1.5 Recipient OK\\r\\n'\nreply: retcode (250); Msg: b'2.1.5 Recipient OK'\nsend: 'data\\r\\n'\nreply: b'354 Start mail input; end with <CRLF>.<CRLF>\\r\\n'\nreply: retcode (354); Msg: b'Start mail input; end with <CRLF>.<CRLF>'\ndata: (354, b'Start mail input; end with <CRLF>.<CRLF>')\nsend: b'Content-Type: text/plain; charset=\"utf-8\"\\r\\nMIME-Version: 1.0\\r\\nContent-Transfer-Encoding: base64\\r\\nFrom: hongjunwu@hotmail.com\\r\\nTo: hongjunwu@hotmail.com\\r\\nSubject: =?utf-8?q?=5BPython=5D_There_is_an_apartment=2E?=\\r\\n\\r\\nR28gYW5kIGdldCB5b3VyIGFwYXJ0bWVudCE=\\r\\n.\\r\\n'\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "reply: b'250 2.0.0 OK <BN1PR0301MB0659ECED69DBC0D79CD51B81B28D0@BN1PR0301MB0659.namprd03.prod.outlook.com> [Hostname=BN1PR0301MB0659.namprd03.prod.outlook.com]\\r\\n'\nreply: retcode (250); Msg: b'2.0.0 OK <BN1PR0301MB0659ECED69DBC0D79CD51B81B28D0@BN1PR0301MB0659.namprd03.prod.outlook.com> [Hostname=BN1PR0301MB0659.namprd03.prod.outlook.com]'\ndata: (250, b'2.0.0 OK <BN1PR0301MB0659ECED69DBC0D79CD51B81B28D0@BN1PR0301MB0659.namprd03.prod.outlook.com> [Hostname=BN1PR0301MB0659.namprd03.prod.outlook.com]')\nsend: 'quit\\r\\n'\nreply: b'221 2.0.0 Service closing transmission channel\\r\\n'\nreply: retcode (221); Msg: b'2.0.0 Service closing transmission channel'\n"
+      "reply: b'250 2.0.0 OK <BN1PR0301MB06593F62DCA8D9B0E423351AB28D0@BN1PR0301MB0659.namprd03.prod.outlook.com> [Hostname=BN1PR0301MB0659.namprd03.prod.outlook.com]\\r\\n'\nreply: retcode (250); Msg: b'2.0.0 OK <BN1PR0301MB06593F62DCA8D9B0E423351AB28D0@BN1PR0301MB0659.namprd03.prod.outlook.com> [Hostname=BN1PR0301MB0659.namprd03.prod.outlook.com]'\ndata: (250, b'2.0.0 OK <BN1PR0301MB06593F62DCA8D9B0E423351AB28D0@BN1PR0301MB0659.namprd03.prod.outlook.com> [Hostname=BN1PR0301MB0659.namprd03.prod.outlook.com]')\nsend: 'quit\\r\\n'\nreply: b'221 2.0.0 Service closing transmission channel\\r\\n'\nreply: retcode (221); Msg: b'2.0.0 Service closing transmission channel'\n"
      ]
     },
     {
@@ -146,7 +146,7 @@
        "(221, b'2.0.0 Service closing transmission channel')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
